--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -28,10 +28,13 @@ I am a versatile **Firmware** / **Software** / **DevSecOps** Engineer and **Open
 At my current role, I've developed a systematic BIOS serial save feature (D4D), reducing engineers' debugging time by 20% and enhancing customer satisfaction and retention. I'm a staunch advocate for CI/CD automated BIOS code signing and cutting-edge auto-testing systems, ensuring our releases are bug-free and lightning-fast.
 
 
-As a **Technical Leader**, I've led diverse teams in delivering major webGIS and software projects such as intelligent HomeLand systems, satellite Radar data analysis, and urban planning systems.
+As a **Technical Leader**, I've led diverse teams in delivering major webGIS and software projects such as automation framework, intergration systems, satellite Radar data analysis, and urban planning systems.
 
 
-Outside of my day-to-day work, I contribute to **open-source projects** and stay engaged with the developer community through tech meetups and conferences. I am always seeking to learn new technologies and methodologies to stay at the forefront of software firmware engineering trends. I also offer expertise in **Geomatics**, providing free consulting services and fostering discussions on spatial data.
+Outside of my day-to-day work, I hold an **AWS** Certified Solutions Architect certification, with a focus on cloud computing exploration. I actively contribute to **open-source** projects and engage with the developer community through tech meetups and conferences. I am committed to continuous learning of new technologies and methodologies to remain at the forefront of software firmware engineering trends.
+
+
+I also expertise in **Geomatics**, providing free consulting services and fostering discussions on spatial data. Currently collaborating long-term with a GIS development team.
 
 "
 
@@ -59,8 +62,8 @@ resourceLinks:
 - title: "My Resume - zh"
   url: "https://drive.google.com/file/d/14fkzUQfN3ig6wVj82avfAvq1Ynxn_941/view?usp=sharing"
 
-- title: "My Portfolio"
-  url: "https://drive.google.com/file/d/1oyhzk6fjQgVEOwtv9K000E7fD5ddJFPa/view?usp=sharing"
+# - title: "My Portfolio"
+#   url: "https://drive.google.com/file/d/1oyhzk6fjQgVEOwtv9K000E7fD5ddJFPa/view?usp=sharing"
 
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
@@ -90,15 +93,19 @@ badges:
   badge: "https://images.credly.com/size/340x340/images/0e284c3f-5164-4b21-8660-0d84737941bc/image.png"
 
 - type: hard-skill-indicator
+  name: FY25 Dell Game Changer Award - BIOS Feature
+  url: "https://www.linkedin.com/in/jy-hsu/overlay/1722047658352/single-media-viewer/?type=IMAGE&profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
+  badge: "/images/sections/about/FY25_game_changer.jpg"
+
+- type: hard-skill-indicator
+  name: FY24 Dell Game Changer Award - CI/CD Automation
+  url: "https://www.linkedin.com/in/jy-hsu/overlay/1722047584463/single-media-viewer/?type=IMAGE&profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
+  badge: "/images/sections/about/FY24_game_changer.jpg"
+
+- type: hard-skill-indicator
   name: IThome Keep Sharing Award
   url: "https://ithelp.ithome.com.tw/users/20108631/ironman/3629"
   badge: "/images/sections/about/ITHome.png"
-
-- type: hard-skill-indicator
-  name: Dell Game Changer Award
-  url: "https://www.linkedin.com/in/jy-hsu/overlay/1635508027638/single-media-viewer/?profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
-  badge: "/images/sections/about/game_changer.jpg"
-
 
 - type: certification
   name: PMP Certification Training
