--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -22,8 +22,8 @@ buttons:
   filter: "open source"
 - name: Side Projects
   filter: "side project"
-- name: Hobby
-  filter: "hobby"
+- name: Hobbies
+  filter: "hobbies"
 
 
 # your projects
@@ -55,26 +55,23 @@ projects:
   summary: Implemented an **asynchronous** testing program for third-party APIs, ensuring rapid validation of multiple APIs. Utilized async methods for efficiency and automated email notifications for prompt issue resolution.
   tags: ["leader", "side project", "software"]
 
-
-
-- name: Dell PowerEdge C Series Modular Server
-  image: /images/sections/projects/thumbnail/poweredge_c6615.png
+- name: Dell PowerEdge C Series Modular HPC (High Performance Computing) Server
+  image: /images/sections/projects/thumbnail/poweredge_c_series.jpg
   role: Developer
   timeline: "May 2023 - December 2023"
   url: "https://www.dell.com/en-us/shop/ipovw/poweredge-c6615?search_redirect=c6615"
   summary: Developed and performed source code level debugging for **Modular Infrastructure** and **Rack** products. Including R6615, C6615 and next generation products.
   tags: ["firmware"]
 
-- name: Geographic Information Integrated Application Platform
+- name: Geographical Information Integrated Application Platform
   image: /images/sections/projects/thumbnail/hlgis.png
   logo: /images/sections/skills/gis.svg
   role: Team Lead
   timeline: "October 2020 - August 2021"
-  url: https://map.hl.gov.tw/HLGIS # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  url: https://map.hl.gov.tw/HLGIS/DataComp.aspx # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Production-Grade Container Scheduling and Management.
+  summary: Served as the Technical Leader for the department's largest project, leading a team in collecting and analyzing diverse map data and establishing spatial information integration application features.
   tags: ["leader", "software"]
-
 
 - name: "[Technical Articles] Getting Started with WebGIS - Implementing with Openlayers"
   image: /images/sections/projects/thumbnail/ithelp.jpg
@@ -83,7 +80,7 @@ projects:
   timeline: "May 2024 - Present"
   url: https://ithelp.ithome.com.tw/users/20108631/ironman/3629
   # url: https://ithelp.ithome.com.tw/users/20108631/ironman/3629
-  summary: A Hugo theme for personal portfolio.
+  summary: Participated in a self-improvement competition by sharing technical articles for 30 consecutive days, guiding novices on how to write a WebGIS.
   tags: ["side project","software","open source"]
 
 - name: Flow to Paddies
@@ -92,23 +89,19 @@ projects:
   role: Developer
   timeline: "May 2024 - Present"
   repo: https://github.com/joyao/water_irrigation
-  url: https://mengchin.github.io/water_irrigation/
-  summary: A Hugo theme for personal portfolio.
-  tags: ["side project","software","hobby"]
-
-
-
+  url: https://joyao.github.io/water_irrigation/
+  summary: Won first place in the WRA 2022 Water Resource IoT Competition with a project that utilized open-source water-related data to analyze and predict water requirements for each paddy season.
+  tags: ["side project","software","hobbies"]
 
 - name: Urban Planning Application Management System
   image: /images/sections/projects/thumbnail/hlup.png
   logo: /images/sections/skills/gis.svg
   role: Team Lead
   timeline: "October 2020 - August 2021"
-  repo: https://map.hl.gov.tw/HLUPWeb # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  url: https://map.hl.gov.tw/HLUPWeb # If your project is a public repo on GitHub, then provide this link. it will show star count.D
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Production-Grade Container Scheduling and Management.
+  summary: Spearheaded the development and leadership of the Urban Planning Application Management System, revolutionizing customer operations by transitioning from paper-based to digital workflows, and dramatically enhancing map finding and geolocation capabilities.
   tags: ["leader", "software"]
-
 
 - name: CECI Homeland Security Monitoring Platform
   image: /images/sections/projects/thumbnail/ceci-sarweb.png
@@ -117,9 +110,8 @@ projects:
   timeline: "Oct 2019 - Dec 2019"
   url: https://gisportal.ceci.com.tw/SARWeb/
   #url: ""
-  summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
-  tags: ["software"]
-
+  summary: Invented and patented (M597309) a groundbreaking 3-tier search architecture for monitoring long-term land surface displacement. This innovation was successfully applied in bridge monitoring, prompting Taipei government reconstruction efforts to prevent future disasters.
+  tags: ["leader","software"]
 
 - name: Hugo Toha - OSS Contributor
   image: /images/sections/projects/thumbnail/hugo-toha.png
@@ -127,9 +119,8 @@ projects:
   role: Contributor
   timeline: "May 2024 - Present"
   repo: https://github.com/hossainemruz/toha
-  summary: A Hugo theme for personal portfolio.
+  summary: Enhanced and debugged the frontend and backend of 'Toha', a Hugo theme for personal portfolios, improving overall functionality and user experience.
   tags: ["side project","software","open source"]
-
 
 - name: CI/CD and Geomatics Technical Consultant
   image: /images/sections/projects/thumbnail/DevSecOps.jpg
@@ -137,7 +128,7 @@ projects:
   timeline: "August 2021 - Present"
   # url: "https://www.example.com"
   summary: An unpaid consultant job providing geospatial data analysis, GIS, SAR, LiDAR, drone(UAV), surveying, CI/CD, web development and basic infrastructure consulting.
-  tags: ["side project","hobby"]
+  tags: ["side project","hobbies"]
 
 - name: Nocode
   logo: /images/sections/projects/no-code.png
@@ -146,4 +137,4 @@ projects:
   repo: https://github.com/kelseyhightower/nocode
   #url: ""
   summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
-  tags: ["hobby"]
+  tags: ["hobbies"]
