--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -27,3 +27,5 @@ openGraph:
   description: Portfolio and personal blog of JY Hsu.
   image: images/author/jy_hsu.png
   url: https://hugo-toha.github.io
+
+defaultMode: light
