fix: Fix the year of GCA

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -98,12 +98,12 @@ badges:
   badge: "/images/sections/about/FY25_game_changer.jpg"
 
 - type: hard-skill-indicator
-  name: FY24 Dell Game Changer Award - CI/CD Automation
+  name: FY23 Dell Game Changer Award - CI/CD Automation
   url: "https://www.linkedin.com/in/jy-hsu/overlay/1722047584463/single-media-viewer/?type=IMAGE&profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
   badge: "/images/sections/about/FY24_game_changer.jpg"
 
 - type: hard-skill-indicator
-  name: IThome Keep Sharing Award
+  name: 2020 IThome Keep Sharing Award - Modern Web
   url: "https://ithelp.ithome.com.tw/users/20108631/ironman/3629"
   badge: "/images/sections/about/ITHome.png"
 
