--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -15,7 +15,7 @@ customMenus:
 - name: Docs
   url: https://toha-guides.netlify.app/posts/
   # specify whether to hide the menu item from top navbar or not.
-  hideFromNavbar: false
+  hideFromNavbar: true
   # specify whether to show the menu item in footer or not.
   # if you set it to true, make sure you have set `footer.navigation.customMenus: true` in your config.yaml
   showOnFooter: false
@@ -28,4 +28,4 @@ openGraph:
   image: images/author/jy_hsu.png
   url: https://hugo-toha.github.io
 
-defaultMode: light
+defaultTheme: light
