fix: Fix for new theme and update contents

--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -39,7 +39,7 @@ degrees:
   icon: fa-graduation-cap
   timeframe: Feb 2016-Jul 2016
   institution:
-    name: Wuhan University (China)
+    name: Wuhan University (Exchange)
     url: "https://en.whu.edu.cn/"
     logo: /images/sections/education/Wuhan_logo.png
     # Can optionally show a different logo for dark theme
