--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -21,14 +21,14 @@ company:
 # a summary about you
 summary: "Hi there! 👋
 <br>
-I am a versatile **Firmware** / **Software** / **DevSecOps** Engineer and **Open-Source Contributor**, who love learning new things, solving problems, sharing technical skills and constantly improving myself.\n
+I am a active **Firmware** / **Software** / **DevSecOps** / **Test** Engineer and **Open-Source Contributor**, who love learning new things, solving problems, sharing technical skills and constantly improving myself.\n
 
 
 
-At my current role, I've developed a systematic BIOS serial save feature (D4D), reducing engineers' debugging time by 20% and enhancing customer satisfaction and retention. I'm a staunch advocate for CI/CD automated BIOS code signing and cutting-edge auto-testing systems, ensuring our releases are bug-free and lightning-fast.
+At my current role, I've developed a systematic BIOS serial save feature (D4D), reducing engineers' debugging time and enhancing customer satisfaction and retention. I'm a staunch advocate for CI/CD automated BIOS code signing, release file creation and cutting-edge auto-testing systems, ensuring our releases are bug-free and lightning-fast.
 
 
-As a **Technical Leader**, I've led diverse teams in delivering major webGIS and software projects such as automation framework, intergration systems, satellite Radar data analysis, and urban planning systems.
+As a **Technical Leader**, I've led diverse teams in delivering major webGIS and software projects such as test automation framework, intergration systems, satellite RADAR data analysis, and urban planning systems.
 
 
 Outside of my day-to-day work, I hold an **AWS** Certified Solutions Architect certification, with a focus on cloud computing exploration. I actively contribute to **open-source** projects and engage with the developer community through tech meetups and conferences. I am committed to continuous learning of new technologies and methodologies to remain at the forefront of software firmware engineering trends.
@@ -52,6 +52,10 @@ socialLinks:
 - name: LinkedIn
   icon: "fab fa-linkedin"
   url: "https://www.linkedin.com/in/jy-hsu/"
+
+- name: Wordpress
+  icon: "fab fa-wordpress"
+  url: "https://hsujy.wordpress.com/"
 
 # You can put custom buttons to link your relevant resources.
 # For example, you can put link for your resume.
@@ -106,6 +110,11 @@ badges:
   name: 2020 IThome Keep Sharing Award - Modern Web
   url: "https://ithelp.ithome.com.tw/users/20108631/ironman/3629"
   badge: "/images/sections/about/ITHome.png"
+
+# - type: hard-skill-indicator
+#   name: 2024 IThome Keep Sharing Award - Firmware BIOS
+#   url: "https://ithelp.ithome.com.tw/users/20108631/ironman/3629"
+#   badge: "/images/sections/about/ITHome.png"
 
 - type: certification
   name: PMP Certification Training
