--- a/hugo.yaml
+++ b/hugo.yaml
@@ -157,7 +157,7 @@ params:
       services:
         # Google Analytics
         google:
-          id: G-H4LBG7NDFZ
+          id: G-7RN1HBXENM
         # # CounterDev
         # counterDev:
         #   id: <your counterdev id>
