--- a/hugo.yaml
+++ b/hugo.yaml
@@ -123,6 +123,8 @@ params:
       services:
         disqus:
           shortName: toha-example-site
+        googleAnalytics:
+          ID: G-7RN1HBXENM
         # valine:
         #   appId: HTV6askWxVo3vOxlqjjaq2hd-MsYXbMMI
         #   appKey: pVrT3C85KGIuk27t07eh6bUC
