--- a/hugo.yaml
+++ b/hugo.yaml
@@ -123,8 +123,6 @@ params:
       services:
         disqus:
           shortName: toha-example-site
-        googleAnalytics:
-          ID: G-7RN1HBXENM
         # valine:
         #   appId: HTV6askWxVo3vOxlqjjaq2hd-MsYXbMMI
         #   appKey: pVrT3C85KGIuk27t07eh6bUC
@@ -309,3 +307,7 @@ params:
     # Show/hide disclaimer notice in the footer. Default is "false".
     disclaimer:
       enable: false
+
+services:
+  googleAnalytics:
+    id: "G-7RN1HBXENM"
