fix: Update hacktoberfest process

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -116,8 +116,8 @@ badges:
   badge: "/images/sections/about/ITHome2024.png"
 
 - type: hard-skill-indicator
-  name: Hacktoberfest 2024 - Level 2 Certification
-  url: "https://www.holopin.io/hacktoberfest2024/userbadge/cm2hkc5f528760cjsqneet97t"
+  name: Hacktoberfest 2024 Certification
+  url: "https://www.holopin.io/hacktoberfest2024/userbadge/cm2xw4p8360680ciavzudab82"
   badge: "/images/sections/about/Hacktoberfest2024.png"
 
 # - type: hard-skill-indicator
