fix: Fix typo in about page

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -21,7 +21,7 @@ company:
 # a summary about you
 summary: "Hi there! 👋
 <br>
-I am a active **Software** / **Firmware** / **Full-Stack** / **DevSecOps** / **SDET** Engineer and **Open-Source Maintainer / Contributor**, who love learning new things, solving problems, sharing technical skills and constantly improving myself.\n
+I am an active **Software** / **Firmware** / **Full-Stack** / **DevSecOps** / **SDET** Engineer and **Open-Source Maintainer / Contributor**, who love learning new things, solving problems, sharing technical skills and constantly improving myself.\n
 
 
 
