--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -19,6 +19,9 @@ customMenus:
   # specify whether to show the menu item in footer or not.
   # if you set it to true, make sure you have set `footer.navigation.customMenus: true` in your config.yaml
   showOnFooter: false
+  # specify whether to open the menu item in a new browser tab.
+  # This option is only valid when `hideFromNavbar` is false.
+  openInNewTab: true
 
 # Specify OpenGraph Headers
 openGraph:
