--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -23,6 +23,15 @@ customMenus:
   # This option is only valid when `hideFromNavbar` is false.
   openInNewTab: true
 
+- name: Blogger
+  url: https://hsujy.wordpress.com/
+  # specify whether to hide the menu item from top navbar or not.
+  hideFromNavbar: false
+  # specify whether to show the menu item in footer or not.
+  # if you set it to true, make sure you have set `footer.navigation.customMenus: true` in your config.yaml
+  showOnFooter: false
+  openInNewTab: true
+
 # Specify OpenGraph Headers
 openGraph:
   title: JY's Lab
