--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -91,7 +91,7 @@ badges:
 
 
 - type: hard-skill-indicator
-  name: 2025 Dell ISG Hachathon AI-For Special Award
+  name: 2025 Dell ISG Hackathon AI-For Special Award
   # url: "https://www.linkedin.com/in/jy-hsu/overlay/1722047658352/single-media-viewer/?type=IMAGE&profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
   badge: "/images/sections/about/2025_ISG_Hackathon.png"
 
