--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -8,8 +8,25 @@ section:
   # Can optionally hide the title in sections
   # hideTitle: true 
 
-# Your experiences
+  # Your experiences
 experiences:
+- company:
+    name: Google
+    url: "https://about.google/"
+    location: Hybrid, Taiwan
+    logo: /images/sections/experiences/Google_logo.svg
+    # Can optionally show a different logo for dark theme
+    # darkLogo: /images/sections/experiences/company1.jpg
+    # company overview
+    # overview: Dell Technologies is the leader in digital transformation, providing digital technology solutions, products, and services to drive business success.
+  positions:
+  - designation: SoC Security Software Test Engineer
+    start: September 2025
+    # don't provide end date if you are currently working there. It will be replaced by "Present"
+    # end: Dec 2020
+    # give some points about what was your responsibilities at the company.
+    responsibilities:
+    - Pixel SoC Secure-Boot / Secure-Manufacturing software test engineer
 - company:
     name: Dell Technologies
     url: "https://www.dell.com/"
@@ -22,6 +39,7 @@ experiences:
   positions:
   - designation: Senior Firmware Software Engineer
     start: April 2023
+    end: August 2025
     # don't provide end date if you are currently working there. It will be replaced by "Present"
     # end: Dec 2020
     # give some points about what was your responsibilities at the company.
