Simplfy netlify build

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "mise install && mise run install && hugo --gc --minify -b $DEPLOY_URL"
+command = "mise install && mise run build -b $DEPLOY_URL"
 publish = "public"
 
 [build.environment]
@@ -10,7 +10,7 @@ HUGO_ENV = "production"
 
 
 [context.deploy-preview]
-command = "mise install && mise run install && hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "mise install && mise run build --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-command = "mise install && mise run install && hugo --gc --minify -b $DEPLOY_PRIME_URL"
+command = "mise install && mise run build -b $DEPLOY_PRIME_URL"
