--- a/data/bn/site.yaml
+++ b/data/bn/site.yaml
@@ -13,7 +13,7 @@ description: জন ডো এর বাক্তিগত পোর্টফো
 # they will be separated by a divider from the main menus.
 customMenus:
 - name: ডকুমেন্টেশন
-  url: https://toha-guides.netlify.app/posts/
+  url: https://toha-docs.hugo-themes.com/posts/
 
 # Specify OpenGraph Headers
 openGraph:
@@ -21,4 +21,4 @@ openGraph:
   type: website
   description: জন ডো এর বাক্তিগত পোর্টফোলিও ও ব্লগ.
   image: images/author/john.png
-  url: https://hugo-toha.github.io
+  url: https://toha-preview.hugo-themes.com
