--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   template: sections/about.html
 
 # your designation
-designation: SoC Security Software TE/SDET
+designation: SoC Security Software SDET/STE
 # your company information
 company:
   name: Google.
